SFUSA/force-app/main/default/objects/PR_Team__c/fields/Access_Level__c.field-meta.xml
<CustomField>
        <fullName>Access_Level__c</fullName>
        <inlineHelpText>Read : (Read Only) The specified user can view the record only.
Edit : (Read/Write) The specified user can view and edit the record.</inlineHelpText>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>