SFUSA/force-app/main/default/objects/PR_Team__c/fields/PR_Header_OwnerID__c.field-meta.xml
<CustomField>
        <fullName>PR_Header_OwnerID__c</fullName>
        <formula>PR_Header__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Header OwnerID</label>
        <type>Text</type>
    </CustomField>