SFUSA/force-app/main/default/objects/PR_Team__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
        <fullName>Vendor_Name__c</fullName>
        <formula>PR_Header__r.Vendor_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </CustomField>