SFUSA/force-app/main/default/objects/PR_Team__c/validationRules/Collaborator_Required_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>Collaborator_Required_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Collaborator__c)</errorConditionFormula>
        <errorDisplayField>Collaborator__c</errorDisplayField>
        <errorMessage>You must select Collaborator</errorMessage>
    </ValidationRule>