SFUSA/force-app/main/default/objects/PR_Team__c/validationRules/PRHeader_Can_Not_Be_Changed.validationRule-meta.xml
<ValidationRule>
        <fullName>PRHeader_Can_Not_Be_Changed</fullName>
        <active>true</active>
        <description>Once the record is created, you can not change the PR Header</description>
        <errorConditionFormula>ISCHANGED(PR_Header__c)</errorConditionFormula>
        <errorMessage>You can not change the PR Header. Instead delete the record and create a new record.</errorMessage>
    </ValidationRule>